//Class with criteria of which a beer should have
public class Beer extends Alcohol {

    //Constructor
    public Beer(String name, String types, int price, String notes, String country) {
        super(name, types, price, notes, country);
    }



}
