//Class with criteria of which a spirit should have
public class Spirit extends Alcohol {

    //Constructor
    public Spirit(String name, String types, int price, String notes, String country) {
        super(name, types, price, notes, country);
    }
}
