//Class with criteria of which a wine should have
public class Wine extends Alcohol {

    //Constructor
    public Wine(String name, String types, int price, String notes, String country) {
        super(name, types, price, notes, country);
    }

}
